--- a/ttsx_xm/templates/Goods/detail.html
+++ b/ttsx_xm/templates/Goods/detail.html
@@ -73,14 +73,19 @@
 	</div>
 
 	<div class="goods_detail_con clearfix">
-		<div class="goods_detail_pic fl"><img src="/static/images/goods_detail.jpg"></div>
+{#      goods.pic动态获取路径#}
+		<div class="goods_detail_pic fl"><img src="/static/media/{{ goods.gpic }}"></div>
 
 		<div class="goods_detail_list fr">
-			<h3>大兴大棚草莓</h3>
-			<p>草莓浆果柔软多汁，味美爽口，适合速冻保鲜贮藏。草莓速冻后，可以保持原有的色、香、味，既便于贮藏，又便于外销。</p>
+{#            获取商品名和商品简介#}
+            <h3>{{ goods.gtitle }}</h3>
+            <p>{{ goods.gjianjie }}</p>
+{#			<h3>大兴大棚草莓</h3>#}
+{#			<p>草莓浆果柔软多汁，味美爽口，适合速冻保鲜贮藏。草莓速冻后，可以保持原有的色、香、味，既便于贮藏，又便于外销。</p>#}
 			<div class="prize_bar">
-				<span class="show_pirze">¥<em>16.80</em></span>
-				<span class="show_unit">单  位：500g</span>
+{#                获取商品单价和商品单位#}
+				<span class="show_pirze">¥<em>{{ goods.gprice }}</em></span>
+				<span class="show_unit">单  位：{{ goods.gunit }}</span>
 			</div>
 			<div class="goods_num clearfix">
 				<div class="num_name fl">数 量：</div>
@@ -90,7 +95,7 @@
 					<a href="javascript:" class="minus fr">-</a>
 				</div>
 			</div>
-			<div class="total">总价：<em>16.80元</em></div>
+			<div class="total">总价：<em>{{ goods.gprice }}元</em></div>
 			<div class="operate_btn">
 				<a href="javascript:" class="buy_btn">立即购买</a>
 				<a href="javascript:" class="add_cart" id="add_cart">加入购物车</a>
@@ -103,16 +108,25 @@
 			<div class="new_goods">
 				<h3>新品推荐</h3>
 				<ul>
-					<li>
-						<a href="#"><img src="/static/images/goods/goods001.jpg"></a>
-						<h4><a href="#">进口柠檬</a></h4>
-						<div class="prize">￥3.90</div>
-					</li>
-					<li>
-						<a href="#"><img src="/static/images/goods/goods002.jpg"></a>
-						<h4><a href="#">玫瑰香葡萄</a></h4>
-						<div class="prize">￥16.80</div>
-					</li>
+{#                打印同类新品#}
+                    {% for samegoods in goodslist %}
+                    <li>
+                        <a href="/Goods/{{ samegoods.id }}"><img src="/static/media/{{ samegoods.gpic }}"></a>
+						<h4><a href="#">{{ samegoods.gtitle }}</a></h4>
+						<div class="prize">￥{{ samegoods.gprice }}</div>
+                    </li>
+                    {% endfor %}
+
+{#					<li>#}
+{#						<a href="#"><img src="/static/images/goods/goods001.jpg"></a>#}
+{#						<h4><a href="#">进口柠檬</a></h4>#}
+{#						<div class="prize">￥3.90</div>#}
+{#					</li>#}
+{#					<li>#}
+{#						<a href="#"><img src="/static/images/goods/goods002.jpg"></a>#}
+{#						<h4><a href="#">玫瑰香葡萄</a></h4>#}
+{#						<div class="prize">￥16.80</div>#}
+{#					</li>#}
 				</ul>
 			</div>
 		</div>
@@ -126,7 +140,10 @@
 			<div class="tab_content">
 				<dl>
 					<dt>商品详情：</dt>
-					<dd>草莓采摘园位于北京大兴区 庞各庄镇四各庄村 ，每年1月-6月面向北京以及周围城市提供新鲜草莓采摘和精品礼盒装草莓，草莓品种多样丰富，个大香甜。所有草莓均严格按照有机标准培育，不使用任何化肥和农药。草莓在采摘期间免洗可以直接食用。欢迎喜欢草莓的市民前来采摘，也欢迎各大单位选购精品有机草莓礼盒，有机草莓礼盒是亲朋馈赠、福利送礼的最佳选择。 </dd>
+                    {% autoescape off %}
+                    <dd>{{ goods.gcontent }}</dd>
+                    {% endautoescape %}
+{#					<dd>草莓采摘园位于北京大兴区 庞各庄镇四各庄村 ，每年1月-6月面向北京以及周围城市提供新鲜草莓采摘和精品礼盒装草莓，草莓品种多样丰富，个大香甜。所有草莓均严格按照有机标准培育，不使用任何化肥和农药。草莓在采摘期间免洗可以直接食用。欢迎喜欢草莓的市民前来采摘，也欢迎各大单位选购精品有机草莓礼盒，有机草莓礼盒是亲朋馈赠、福利送礼的最佳选择。 </dd>#}
 				</dl>
 			</div>
 
