--- a/ttsx_xm/templates/Goods/index.html
+++ b/ttsx_xm/templates/Goods/index.html
@@ -91,7 +91,8 @@
 				<span>|</span>
 {#                从数据库过滤获取新添加商品#}
                 {% for goods in fruit %}
-                <a href="">{{ goods.gtitle.split.1 }}</a>
+{#                    向detail页面跳转并传图片的id过去#}
+                <a href="/Goods/{{ goods.id }}">{{ goods.gtitle.split.1 }}</a>
                 {% endfor %}
 			</div>
 			<a href="#" class="goods_more fr" id="fruit_more">查看更多 ></a>
@@ -103,9 +104,11 @@
             <ul class="goods_list fl">
                 {% for fpic in fruit2 %}
                 <li>
-                    <h4><a href="">{{ fpic.gtitle.split.1 }}</a></h4>
-                    <a href=""><img src="/static/media/{{ fpic.gpic }}"></a>
+
+                    <h4><a href="/Goods/{{ fpic.id }}/">{{ fpic.gtitle.split.1 }}</a></h4>
+                    <a href="/Goods/{{ fpic.id }}/"><img src="/static/media/{{ fpic.gpic }}"></a>
                     <div class="prize">{{ fpic.gprice }}</div>
+
                 </li>
                 {% endfor %}
 
@@ -120,7 +123,7 @@
 				<span>|</span>
 {#                从数据库过滤获取新添加商品#}
                 {% for goods in fish %}
-                <a href="">{{ goods.gtitle.split.1 }}</a>
+                <a href="/Goods/{{ goods.id }}">{{ goods.gtitle.split.1 }}</a>
                 {% endfor %}
 
 			</div>
@@ -133,8 +136,8 @@
 {#            从数据库过滤获取点击量最高的四个商品，遍历显示#}
                  {% for fpic in fish2 %}
                 <li>
-                    <h4><a href="">{{ fpic.gtitle.split.1 }}</a></h4>
-                    <a href=""><img src="/static/media/{{ fpic.gpic }}"></a>
+                    <h4><a href="/Goods/{{ fpic.id }}">{{ fpic.gtitle.split.1 }}</a></h4>
+                    <a href="/Goods/{{ fpic.id }}"><img src="/static/media/{{ fpic.gpic }}"></a>
                     <div class="prize">{{ fpic.gprice }}</div>
                 </li>
                 {% endfor %}
@@ -150,7 +153,7 @@
 				<span>|</span>
  {#                从数据库过滤获取新添加商品#}
                 {% for goods in meal %}
-                <a href="">{{ goods.gtitle.split.1 }}</a>
+                <a href="/Goods/{{ goods.id }}">{{ goods.gtitle.split.1 }}</a>
                 {% endfor %}
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
@@ -162,8 +165,8 @@
 {#            从数据库过滤获取点击量最高的四个商品，遍历显示#}
                   {% for fpic in meal2 %}
                 <li>
-                    <h4><a href="">{{ fpic.gtitle.split.1 }}</a></h4>
-                    <a href=""><img src="/static/media/{{ fpic.gpic }}"></a>
+                    <h4><a href="/Goods/{{ fpic.id }}">{{ fpic.gtitle.split.1 }}</a></h4>
+                    <a href="/Goods/{{ fpic.id }}"><img src="/static/media/{{ fpic.gpic }}"></a>
                     <div class="prize">{{ fpic.gprice }}</div>
                 </li>
                 {% endfor %}
@@ -178,7 +181,7 @@
 				<span>|</span>
 {#                从数据库过滤获取新添加商品#}
                 {% for goods in eggs %}
-                <a href="">{{ goods.gtitle.split.1 }}</a>
+                <a href="/Goods/{{ goods.id }}">{{ goods.gtitle.split.1 }}</a>
                 {% endfor %}
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
@@ -190,8 +193,8 @@
 {#            从数据库过滤获取点击量最高的四个商品，遍历显示#}
                 {% for fpic in eggs2 %}
                 <li>
-                    <h4><a href="">{{ fpic.gtitle.split.0 }}</a></h4>
-                    <a href=""><img src="/static/media/{{ fpic.gpic }}"></a>
+                    <h4><a href="/Goods/{{ fpic.id }}">{{ fpic.gtitle.split.0 }}</a></h4>
+                    <a href="/Goods/{{ fpic.id }}"><img src="/static/media/{{ fpic.gpic }}"></a>
                     <div class="prize">{{ fpic.gprice }}</div>
                 </li>
                 {% endfor %}
@@ -206,7 +209,7 @@
 				<span>|</span>
 {#                从数据库过滤获取新添加商品#}
                 {% for goods in vege %}
-                <a href="">{{ goods.gtitle.split.1 }}</a>
+                <a href="/Goods/{{ goods.id }}">{{ goods.gtitle.split.1 }}</a>
                 {% endfor %}
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
@@ -218,8 +221,8 @@
 {#            从数据库过滤获取点击量最高的四个商品，遍历显示#}
                 {% for fpic in vege2 %}
                 <li>
-                    <h4><a href="">{{ fpic.gtitle.split.1 }}</a></h4>
-                    <a href=""><img src="/static/media/{{ fpic.gpic }}"></a>
+                    <h4><a href="/Goods/{{ fpic.id }}">{{ fpic.gtitle.split.1 }}</a></h4>
+                    <a href="/Goods/{{ fpic.id }}"><img src="/static/media/{{ fpic.gpic }}"></a>
                     <div class="prize">{{ fpic.gprice }}</div>
                 </li>
                 {% endfor %}
@@ -234,7 +237,7 @@
 				<span>|</span>
 {#                从数据库过滤获取新添加商品#}
                 {% for goods in fastFrozen %}
-                <a href="">{{ goods.gtitle.split.1 }}</a>
+                <a href="/Goods/{{ goods.id }}">{{ goods.gtitle.split.1 }}</a>
                 {% endfor %}
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
@@ -246,8 +249,8 @@
 {#            从数据库过滤获取点击量最高的四个商品，遍历显示#}
                 {% for fpic in fastFrozen2 %}
                 <li>
-                    <h4><a href="">{{ fpic.gtitle.split.0 }}</a></h4>
-                    <a href=""><img src="/static/media/{{ fpic.gpic }}"></a>
+                    <h4><a href="/Goods/{{ fpic.id }}">{{ fpic.gtitle.split.0 }}</a></h4>
+                    <a href="/Goods/{{ fpic.id }}"><img src="/static/media/{{ fpic.gpic }}"></a>
                     <div class="prize">{{ fpic.gprice }}</div>
                 </li>
                 {% endfor %}
