--- a/ttsx_xm/templates/Goods/index.html
+++ b/ttsx_xm/templates/Goods/index.html
@@ -8,7 +8,7 @@
         <script type="text/javascript">
         $(function () {
 {#            显示 欢迎用户块   #}
-            var user = $('#user').attr('href').split('/')
+            var user = $('.user').attr('href').split('/')
             if(user[3] != ''){
                 $(".login_info").show();
                 $(".login_btn").hide();
@@ -29,7 +29,7 @@
 			<div class="welcome fl">欢迎来到天天生鲜!</div>
 			<div class="fr">
 				<div class="login_info fl">
-					欢迎您：<a class="user" href="/User/userinfo{{ uname }}">用户名</a>
+					欢迎您：<a class="user" href="/User/user_center/{{ uname }}">用户名</a>
 				</div>
 				<div class="login_btn fl">
 					<a href="/User/login/">登录</a>
@@ -38,7 +38,7 @@
 				</div>
 				<div class="user_link fl">
 					<span>|</span>
-					<a id="user" href="/User/user_center_info/{{ uname }}/">用户中心</a>
+					<a id="user" href="/User/user_center/{{ uname }}">用户中心</a>
 					<span>|</span>
 					<a href="/Cart/cart/">我的购物车</a>
 					<span>|</span>
