--- a/ttsx_xm/templates/User/login.html
+++ b/ttsx_xm/templates/User/login.html
@@ -9,18 +9,18 @@
     <script type="text/javascript">
         $(function () {
             $('.input_submit').click(function () {
-                $.post('/User/toLogin/',{'name':$('.name_input').val()}, function (data) {//{}
-
-                    var upwd =$('.pass_input').val()
-                    if(data.pwd ==upwd && upwd.length>0){
-                        $.get('/User/toindex/',{'name':$('.name_input').val()}, function (data) {
-                            url = "http://127.0.0.1:8000/Goods/name="+data.uname;
-                            window.location.href = url;
-                        })
-                    }else {
-                        $('.pass_input').val('');
-                        $('.btn_error').show();
-                    }
+            $.post('/User/toLogin/',{'name':$('.name_input').val()}, function (data) {//{}
+{#            $.post('/User/toLogin/', function (data) {//{}#}
+                var upwd =$('.pass_input').val()
+                if(data.pwd ==upwd && upwd.length>0){
+                    $.get('/User/toindex/',{'name':$('.name_input').val()}, function (data) {
+                        url = "http://127.0.0.1:8000/Goods/name="+data.uname;
+                        window.location.href = url;
+                    })
+                }else {
+                    $('.pass_input').val('');
+                    $('.btn_error').show();
+                }
                 });
 
             });
@@ -33,6 +33,7 @@
                     $('.input_submit').click();
                 }
             });
+
             $('.name_input').dblclick(function () {
                 $.get('/User/session_get/',function (data) {
                     var list=data.name;
@@ -68,7 +69,8 @@
 				</div>
 				<div class="form_input">
 
-					<form method="post" action="">
+					<form method="post" >
+{#                        action="/User/toLogin/">#}
 						<input type="text" name="username" class="name_input" placeholder="请输入用户名">
 						<select id="rename"></select>
                         <div class="user_error">输入错误</div>
@@ -82,7 +84,7 @@
 							<a href="#">忘记密码</a>
 						</div>
 						<input type="button" name="" value="登录" class="input_submit">
-                        <div class="btn_error">用户名或密码错误,请重试!</div>
+                        <div class="btn_error" style="display: {{ display }}">用户名或密码错误,请重试!</div>
 
                     </form>
 
