--- a/ttsx_xm/templates/User/user_center_info.html
+++ b/ttsx_xm/templates/User/user_center_info.html
@@ -32,18 +32,18 @@
 				</div>
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="user_center_info.html">用户中心</a>
+					<a href="/User/user_center/{{ uname }}/">用户中心</a>
 					<span>|</span>
-					<a href="cart.html">我的购物车</a>
+					<a href="/Cart/cart/">我的购物车</a>
 					<span>|</span>
-					<a href="user_center_order.html">我的订单</a>
+					<a href="/User/user_order/{{ uname }}/">我的订单</a>
 				</div>
 			</div>
 		</div>		
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
+		<a href="http://127.0.0.1:8000" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;用户中心</div>
 		<div class="search_con fr">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
@@ -55,9 +55,9 @@
 		<div class="left_menu_con clearfix">
 			<h3>用户中心</h3>
 			<ul>
-				<li><a href="user_center_info.html" class="active">· 个人信息</a></li>
-				<li><a href="user_center_order.html">· 全部订单</a></li>
-				<li><a href="user_center_site.html">· 收货地址</a></li>
+				<li><a href="/User/user_center/{{ uname }}/" class="active">· 个人信息</a></li>
+				<li><a href="/User/user_order/{{ uname }}/">· 全部订单</a></li>
+				<li><a href="/User/user_site/{{ uname }}/">· 收货地址</a></li>
 			</ul>
 		</div>
 		<div class="right_content clearfix">
