--- a/ttsx_xm/templates/User/user_center_site.html
+++ b/ttsx_xm/templates/User/user_center_site.html
@@ -3,14 +3,28 @@
     {% block title %}
     <title>天天生鲜-用户中心</title>
     {% endblock title %}
->>>>>>> dev
+    {% block head %}
+        <script type="text/javascript">
+        $(function () {
+            var user = $('#user').html()
+            if(user != ''){
+                $(".login_info").show();
+                $(".login_btn").hide();
+            }
+            if(user == ''){
+                $(".login_info").hide();
+                $(".login_btn").show();
+            }
+        });
+        </script>
+    {% endblock head %}
 {% block body %}
 	<div class="header_con">
 		<div class="header">
 			<div class="welcome fl">欢迎来到天天生鲜!</div>
 			<div class="fr">
 				<div class="login_info fl">
-					欢迎您：<em>张 山</em>
+					欢迎您：<span id="user">{{ uname }}</span>
 				</div>
 				<div class="login_btn fl">
 					<a href="login.html">登录</a>
@@ -19,18 +33,18 @@
 				</div>
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="user_center_info.html">用户中心</a>
+					<a href="/User/user_center/{{ uname }}/">用户中心</a>
 					<span>|</span>
-					<a href="cart.html">我的购物车</a>
+					<a href="/Cart/cart/">我的购物车</a>
 					<span>|</span>
-					<a href="user_center_order.html">我的订单</a>
+					<a href="/User/user_order/{{ uname }}/">我的订单</a>
 				</div>
 			</div>
 		</div>		
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="images/logo.png"></a>
+		<a href="http://127.0.0.1:8000" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;用户中心</div>
 		<div class="search_con fr">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
@@ -42,9 +56,9 @@
 		<div class="left_menu_con clearfix">
 			<h3>用户中心</h3>
 			<ul>
-				<li><a href="user_center_info.html">· 个人信息</a></li>
-				<li><a href="user_center_order.html">· 全部订单</a></li>
-				<li><a href="user_center_site.html" class="active">· 收货地址</a></li>
+				<li><a href="/User/user_center/{{ uname }}/">· 个人信息</a></li>
+				<li><a href="/User/user_order/{{ uname }}/">· 全部订单</a></li>
+				<li><a href="/User/user_site/{{ uname }}/" class="active">· 收货地址</a></li>
 			</ul>
 		</div>
 		<div class="right_content clearfix">
