--- a/ttsx_xm/static/css/main.css
+++ b/ttsx_xm/static/css/main.css
@@ -306,8 +306,8 @@ html,body{height:100%}
 
 .input_submit{width:100%;height:40px;position:absolute;left:0;top:180px;background-color:#47aa34;color:#fff;font-size:22px;border:0px;font-family:'Microsoft Yahei';cursor:pointer;outline-color: #47aa34}
 .btn_error{position: absolute;left:10px;bottom:10px;color:#f00;display: none}
-.rename{width:306px;position: absolute;left:0;top:36px; display: none;z-index:999;}
-.op{width:306px;height:33px; line-height:33px; border:1px solid lightgray;background-color: ghostwhite;text-indent:10px;font-size:14px;display: none;}
+.rename{width:306px;position: absolute;left:0;top:38px; display: none;z-index:999;}
+.op{width:306px;height:33px; line-height:33px; border-bottom:1px solid lightgray;border-left:1px solid lightgray;border-right:1px solid lightgray;background-color: ghostwhite;text-indent:10px;font-size:14px;display: none;}
 .op:hover{background-color: yellowgreen;}
 /* 注册页面 */
 .register_con{
