--- a/ttsx_xm/templates/User/login.html
+++ b/ttsx_xm/templates/User/login.html
@@ -22,24 +22,18 @@
                 $.post('/User/toLogin/',{'name':$('.name_input').val()}, function (data) {//{}
 
                     var upwd =$('.pass_input').val()
-                    var i =1;
                     if(data.pwd ==upwd && upwd.length>0){
-                        $.get('/User/toindex/',{'name':$('.name_input').val()}, function (data) {
-                            url = "http://127.0.0.1:8000/Goods/name="+data.uname;
-                            window.location.href = url;
+                        $.get('/User/toindex/',{'name':$('.name_input').val(),'ischeck':$(".Remember").prop("checked")}, function () {
+                            window.location.href = '/';
                         });
-                        $.get('/User/saveName/', {'name':$('.name_input').val()})
                     }else {
                         $('.pass_input').val('');
                         $('.btn_error').show();
-                        i +=1;
-                        if(i>=3){
-                            $.get('/User/lockPwd/')
-                        }
                     }
                 });
 
             });
+
             $('.pass_input').focus(function () {
                 $('.btn_error').hide(); // 提示文字隐藏
             });
@@ -51,15 +45,6 @@
             });
             // 双击
             $('.name_input').dblclick(function () {
-                $.get('/User/session_get/',function (data) {
-                    var list=data.name;
-                    var shi=$('#rename').empty();
-
-                    $.each(list,function (i, n) {//n-->
-
-                        shi.append('<option>'+list+'</option>');
-                    });
-                })
                 $('.rename').show();
                 $('.op').show();
             });
@@ -86,7 +71,31 @@
                 var name=$(this).html();
                 $('.name_input').val(name);
                 $('.rename').hide();
-            })
+                // 判断是否有session
+                $.post('/User/remember/',{'name':$('.name_input').val()},function (data) {
+                    var pwd =data.repwd
+{#                    alert(pwd)#}
+                    if(pwd){
+                        $(".Remember").prop("checked",true);
+                        $('.pass_input').val(pwd)
+                    }else {
+                        $('.pass_input').val('')
+                    }
+                });
+
+            });
+
+            $(".Remember").click(function () {
+                var ischecked = $(".Remember").prop("checked");
+                if(ischecked==0){
+                    $.post('/User/clearSession/', function (data) {
+                        var type =data.type
+                        if(type ==0){
+                            $('.pass_input').val('')
+                        }
+                    });
+                }
+            });
 
 
         });
@@ -121,7 +130,7 @@
 						<div class="pwd_error">输入错误</div>
 
                         <div class="more_input clearfix">
-							<input type="checkbox" name="Remember">
+							<input type="checkbox" name="Remember" class="Remember">
 							<label>记住密码</label>
 							<a href="#">忘记密码</a>
 						</div>
