--- a/ttsx_xm/templates/Goods/index.html
+++ b/ttsx_xm/templates/Goods/index.html
@@ -77,12 +77,12 @@
 
 	<div class="center_con clearfix">
 		<ul class="subnav fl">
-			<li><a href="/Goods/list1" class="fruit">新鲜水果</a></li>
-			<li><a href="/Goods/list2" class="seafood">海鲜水产</a></li>
-			<li><a href="/Goods/list3" class="meet">猪牛羊肉</a></li>
-			<li><a href="/Goods/list4" class="egg">禽类蛋品</a></li>
-			<li><a href="/Goods/list5" class="vegetables">新鲜蔬菜</a></li>
-			<li><a href="/Goods/list6" class="ice">速冻食品</a></li>
+			<li><a href="/Goods/list1_0" class="fruit">新鲜水果</a></li>
+			<li><a href="/Goods/list2_0" class="seafood">海鲜水产</a></li>
+			<li><a href="/Goods/list3_0" class="meet">猪牛羊肉</a></li>
+			<li><a href="/Goods/list4_0" class="egg">禽类蛋品</a></li>
+			<li><a href="/Goods/list5_0" class="vegetables">新鲜蔬菜</a></li>
+			<li><a href="/Goods/list6_0" class="ice">速冻食品</a></li>
 		</ul>
 		<div class="slide fl">
 			<ul class="slide_pics">
