--- a/ttsx_xm/templates/Goods/list.html
+++ b/ttsx_xm/templates/Goods/list.html
@@ -1,8 +1,18 @@
 {% extends 'base.html' %}
-    {% block title %}
+{% block title %}
     <title>天天生鲜-商品列表</title>
-    {% endblock title %}
-
+{% endblock title %}
+{% block head %}
+{#    <script type="text/javascript">#}
+{#        $(function () {#}
+{#            var sort = $(".sort_bar");#}
+{#            sort.delegate('a','click',function () {#}
+{#                $(this).addClass("active").siblings().removeClass("active");#}
+{#            })#}
+{#        })#}
+{##}
+{#    </script>#}
+{% endblock head %}
 {% block body %}
 
 	<div class="header_con">
@@ -47,12 +57,12 @@
 				<h1>全部商品分类</h1>	
 				<span></span>			
 				<ul class="subnav">
-					<li><a href="/Goods/list1" class="fruit">新鲜水果</a></li>
-					<li><a href="/Goods/list2" class="seafood">海鲜水产</a></li>
-					<li><a href="/Goods/list3" class="meet">猪牛羊肉</a></li>
-					<li><a href="/Goods/list4" class="egg">禽类蛋品</a></li>
-					<li><a href="/Goods/list5" class="vegetables">新鲜蔬菜</a></li>
-					<li><a href="/Goods/list6" class="ice">速冻食品</a></li>
+					<li><a href="/Goods/list1_0" class="fruit">新鲜水果</a></li>
+					<li><a href="/Goods/list2_0" class="seafood">海鲜水产</a></li>
+					<li><a href="/Goods/list3_0" class="meet">猪牛羊肉</a></li>
+					<li><a href="/Goods/list4_0" class="egg">禽类蛋品</a></li>
+					<li><a href="/Goods/list5_0" class="vegetables">新鲜蔬菜</a></li>
+					<li><a href="/Goods/list6_0" class="ice">速冻食品</a></li>
 				</ul>
 			</div>
 			<ul class="navlist fl">
@@ -84,25 +94,19 @@
                         </li>
                     {% endfor %}
 
-{#					<li>#}
-{#						<a href="#"><img src="/static/images/goods/goods001.jpg"></a>#}
-{#						<h4><a href="#">进口柠檬</a></h4>#}
-{#						<div class="prize">￥3.90</div>#}
-{#					</li>#}
-{#					<li>#}
-{#						<a href="#"><img src="/static/images/goods/goods002.jpg"></a>#}
-{#						<h4><a href="#">玫瑰香葡萄</a></h4>#}
-{#						<div class="prize">￥16.80</div>#}
-{#					</li>#}
+
 				</ul>
 			</div>
 		</div>
 
 		<div class="r_wrap fr clearfix">
 			<div class="sort_bar">
-				<a href="#" class="active">默认</a>
-				<a href="#">价格</a>
-				<a href="#">人气</a>
+				<a href="/Goods/list{{ goods.0.gtype.id }}_0"
+                {% if sort == "0" %}class="active" {% endif %}>默认</a>
+				<a href="/Goods/list{{ goods.0.gtype.id }}_1"
+                {% if sort == "1" %}class="active" {% endif %}>价格</a>
+				<a href="/Goods/list{{ goods.0.gtype.id }}_2"
+                {% if sort == "2" %}class="active" {% endif %}>人气</a>
 			</div>
 
 			<ul class="goods_type_list clearfix">
@@ -113,141 +117,6 @@
                     <div class="prize">￥{{ good.gprice }}</div>
                     </li>
                 {% endfor %}
-{#				<li>#}
-{#					<a href="detail.html"><img src="/static/images/goods/goods003.jpg"></a>#}
-{#					<h4><a href="detail.html">大兴大棚草莓</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥16.80</span>#}
-{#						<span class="unit">16.80/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="/static/images/goods/goods004.jpg"></a>#}
-{#					<h4><a href="#">吐鲁番梨光杏</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥5.50</span>#}
-{#						<span class="unit">5.50/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="/static/images/goods/goods005.jpg"></a>#}
-{#					<h4><a href="#">黄肉桃</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥10.00</span>#}
-{#						<span class="unit">10.00/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="/static/images/goods/goods006.jpg"></a>#}
-{#					<h4><a href="#">进口西梅</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥28.80</span>#}
-{#						<span class="unit">28.8/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="/static/images/goods/goods007.jpg"></a>#}
-{#					<h4><a href="#">香梨</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥6.45</span>#}
-{#						<span class="unit">6.45/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="/static/images/goods/goods008.jpg"></a>#}
-{#					<h4><a href="#">栗子</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥9.50</span>#}
-{#						<span class="unit">9.50/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="/static/images/goods/goods009.jpg"></a>#}
-{#					<h4><a href="#">海南香蕉</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥3.30</span>#}
-{#						<span class="unit">3.30/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="/static/images/goods/goods010.jpg"></a>#}
-{#					<h4><a href="#">青苹果</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥5.00</span>#}
-{#						<span class="unit">5.00/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="/static/images/goods/goods011.jpg"></a>#}
-{#					<h4><a href="#">山莓</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥28.80</span>#}
-{#						<span class="unit">28.8/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{##}
-{#				<li>#}
-{#					<a href="#"><img src="/static/images/goods/goods012.jpg"></a>#}
-{#					<h4><a href="#">奇异果</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥25.80</span>#}
-{#						<span class="unit">25.8/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<a href="#"><img src="/static/images/goods/goods013.jpg"></a>#}
-{#					<h4><a href="#">蜜桔</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥4.80</span>#}
-{#						<span class="unit">4.8/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<a href="#"><img src="/static/images/goods/goods014.jpg"></a>#}
-{#					<h4><a href="#">脐橙</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥3.50</span>#}
-{#						<span class="unit">3.50/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<a href="#"><img src="/static/images/goods/goods001.jpg"></a>#}
-{#					<h4><a href="#">进口柠檬</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥3.90</span>#}
-{#						<span class="unit">3.90/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<a href="#"><img src="/static/images/goods/goods002.jpg"></a>#}
-{#					<h4><a href="#">玫瑰香葡萄</a></h4>#}
-{#					<div class="operate">#}
-{#						<span class="prize">￥16.80</span>#}
-{#						<span class="unit">16.80/500g</span>#}
-{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
-{#					</div>#}
-{#				</li>#}
 			</ul>
 
 			<div class="pagenation">
