--- a/ttsx_xm/templates/User/login.html
+++ b/ttsx_xm/templates/User/login.html
@@ -7,6 +7,7 @@
     {% block head %}
     <script type="text/javascript" src="/static/js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="/static/js/login.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.sha1.js"></script>
     <script type="text/javascript">
         $(function () {
 
@@ -18,11 +19,13 @@
                 });
 
             });
+            var i=0;
             //判断密码匹配,跳转
             $('.input_submit').click(function () {
                 $.post('/User/toLogin/', {'name': $('.name_input').val()}, function (data) {//{}
                     var upwd = $('.pass_input').val();
-                    if (data.pwd == upwd) {
+                    var shapwd =$.sha1(upwd);
+                    if (data.pwd == shapwd) {
                         $.get('/User/toindex/', {'name': $('.name_input').val(),'ischeck':$(".Remember").prop("checked")}, function () {
                             window.location.href = '/';
                         });
@@ -30,17 +33,29 @@
                     else if(data.pwd == 'notValid'){
                         $('.pass_input').val('');
                         $('.btn_error').html('当前账号不可用').show();
+                        i +=1;
                         }
                     else if(data.pwd == 'notExists'){
                         $('.pass_input').val('');
                         $('.btn_error').html('用户名不存在').show();
+                        i +=1;
                         }
                     else {
                         $('.pass_input').val('');
                         $('.btn_error').html('用户名或密码错误,请重试!').show();
-
+                        i +=1;
+                    }
+                    if(i>=3){
+                        i=0;
+                        $('.yzm').css('display','block');
                     }
                     });
+                // 验证码是否可见
+                var display =$(".yzm").css('display');
+                if(display !='none'){
+                    // 禁用btn属性
+                    $(".input_submit").attr("disabled", true);
+                }
             });
 
 
@@ -107,6 +122,30 @@
                 };
             });
 
+            $('.img').click(function () {
+                // 切换验证码
+                $('.img').attr('src', $(".img").attr('src')+'?1');
+            });
+            $('.yzm_btn').click(function () {
+                $.post('/User/yzm/',{'yzm':$('.yzm_input').val()},function (data) {
+                    var ret =data.ret;
+                    if(ret == true){
+                        $('.tishi').html("输入正确").css('color', 'green');
+                        // $('.yzm').delay(500).hide(0);
+                        $('.yzm').delay(500).css('display','none');
+                        $('.yzm_input').val("");
+                        $(".input_submit").attr("disabled", false);
+                    }else {
+                        $('.tishi').html("输入有误");
+                        $('.yzm_input').val("");
+                        $('.img').click();
+                    }
+
+                });
+
+            });
+
+
 
         });
     </script>
@@ -131,7 +170,6 @@
 
 
 					<form method="post" >
-{#                        action="/User/toLogin/">#}
 						<input type="text" name="username" class="name_input" placeholder="请输入用户名">
 						<div class="rename">
                         </div>
@@ -149,8 +187,17 @@
                         <div class="btn_error" style="display: {{ display }}">用户名或密码错误,请重试!</div>
 
                     </form>
+                    <div class="yzm">
+                        <div class="text">您的操作有误,请三思!</div>
+                        <img src="/User/verify_code/" class="img fl">
+                        <input type="text" name="yzm" class="yzm_input fl" placeholder="请输入验证码">
+                        <div class="tishi fl"></div>
+                        <input type="button" class="yzm_btn fl" value="提    交">
+                    </div>
+
 
 				</div>
+
 			</div>
 		</div>
 	</div>
